# arrange

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
arrange/: Cargo.toml  README.md
arrange/src/: lib.rs
examples/: basic.rs
src/: lib.rs  main.rs
tests/: tests.rs
