[package]
name = "arrange"
version = "0.1.3"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
edition = "2018"
description = "Convenience functions for populating an array with values from a range."
documentation = "https://docs.rs/arrange"
homepage = "https://github.com/cryptopatrick/arrange"
repository = "https://github.com/cryptopatrick/arrange"
readme = "README.md"
keywords = ["arrange", "array", "range", "utility"]
license = "Unlicense/MIT"
autotests = false

[lib]
name = "arrange"
path = "src/lib.rs"

#[bin]
#name = "arrange"
#path = "src/main.rs"


[[test]]
name = "tests"
path = "tests/tests.rs"

#[[bench]]
#name = "bench"
#path = "tests/bench.rs"
#
#[profile.bench]
#opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]