[package]
publish = false
name = "arrange"
version = "0.1.0"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
edition = "2018"
description = "Convenience functions for populating an array with values from a range."
documentation = "https://docs.rs/arrange"
homepage = "https://github.com/cryptopatrick/arrange"
repository = "https://github.com/cryptopatrick/arrange"
readme = "README.md"
keywords = ["arrange", "array", "range", "utility"]
license = "Unlicense/MIT"


[lib]
name = "arrange"
path = "src/lib.rs"


[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies.arrange]

[dev-dependencies.arrange]